# Logicraft

./: .gitignore  CMakeLists.txt
.github/workflows/: unit-test-job.yml
cmake/: CSharpUtils.cmake  PrototypeUtils.cmake  Utils.cmake
prototype/: CMakeLists.txt
prototype/csharp_interop/: CMakeLists.txt
prototype/csharp_interop/cpp_files/include/: game_object.h
prototype/csharp_interop/cpp_files/src/: game_object.cpp
prototype/csharp_interop/csharp_files/: Component.cs  External.cs  GameObject.cs  Main.cs  Quaternion.cs  Vector.cs  interop_testing.csproj
prototype/engine_prototype/engine_core/include/: component.h  game_object.h  game_object_holder.h
prototype/engine_prototype/engine_runtime/: Component.cs  Directory.Build.props  EngineRuntime.csproj  GameObject.cs  InternalComponent.cs  InternalGameObject.cs
prototype/engine_prototype/game_script/: GameScript.csproj
prototype/foo_prototype/: CMakeLists.txt
prototype/foo_prototype/include/: foo.h
prototype/foo_prototype/src/: foo.cpp
prototype/unit_tests/: CMakeLists.txt  unit_tests.cpp
